docs(ingestion): 03-ingestion.md audit — status/config/startup truth (medium items)
- status line: drop unverifiable 149/155; concrete open items (perf gates, ING-RES-001 soak, 3k envelope)
- config table: all ~23 Java keys (freshness gates, 11 HFT policy rows, deployment group)
- startup step 6: explicit binary validation wording
- 00-start-here/01-foundation/11-testing: stale counts -> 296 tests (184+112), 7 skips